--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto" data-theme="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=6528&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="记录技术、架构与工程实践">
 <meta name="author" content="FengHaoyun">
-<link rel="canonical" href="https://FengHaoyun-MONSTER.github.io/404.html">
+<link rel="canonical" href="http://localhost:6528/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5566c526ae48aadabd950798a2dc3568536401560eae5caac3765a42a9e7b5.css" integrity="sha256-/VVmxSauSKravZUHmKLcNWhTZAFWDq5cqsN2WkKp57U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://FengHaoyun-MONSTER.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://FengHaoyun-MONSTER.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://FengHaoyun-MONSTER.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://FengHaoyun-MONSTER.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://FengHaoyun-MONSTER.github.io/safari-pinned-tab.svg">
+<link rel="icon" href="http://localhost:6528/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:6528/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:6528/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:6528/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:6528/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://FengHaoyun-MONSTER.github.io/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:6528/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -70,7 +70,7 @@
         document.querySelector("html").dataset.theme = 'light';
     }
 
-</script><meta property="og:url" content="https://FengHaoyun-MONSTER.github.io/404.html">
+</script><meta property="og:url" content="http://localhost:6528/404.html">
   <meta property="og:site_name" content="FengHaoyun 的技术博客">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="记录技术、架构与工程实践">
@@ -85,7 +85,7 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://FengHaoyun-MONSTER.github.io/" accesskey="h" title="FengHaoyun 的技术博客 (Alt + H)">FengHaoyun 的技术博客</a>
+            <a href="http://localhost:6528/" accesskey="h" title="FengHaoyun 的技术博客 (Alt + H)">FengHaoyun 的技术博客</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -111,12 +111,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://FengHaoyun-MONSTER.github.io/archives/" title="归档">
+                <a href="http://localhost:6528/archives/" title="归档">
                     <span>归档</span>
                 </a>
             </li>
             <li>
-                <a href="https://FengHaoyun-MONSTER.github.io/tags/" title="标签">
+                <a href="http://localhost:6528/tags/" title="标签">
                     <span>标签</span>
                 </a>
             </li>
@@ -128,7 +128,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://FengHaoyun-MONSTER.github.io/">FengHaoyun 的技术博客</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:6528/">FengHaoyun 的技术博客</a></span> · 
 
     <span>
         Powered by
